Add transformers 4.46 compatiblity   (#2078)
* transformers 4.46

* setup

* uupdate setup

* fix t5

* update python (3.8 eol)

* fix onnx test

* fixed deberta, onnxruntime tests in series passing

* fix bt

* fixed t5_forward for real, because it's also used by blip-2 as well

* fix Phi3

* fix opt

* vision encoder decoder

* fix setup

* style

* fix encoder decoder

* fixed transformers branch

* branch

* allow 4.47

* remove patch

* add opt

* add test

* fix OPT ONNX  export and inference

* add test

* update setup

* style

* merge tests

* update tes num beams

* add test transformers version

* add architectures depending on transformers

* add warning

* revert

* update test generation length

* style

---------

Co-authored-by: IlyasMoutawwakil <moutawwakil.ilyas.tsi@gmail.com>

--- a/.github/workflows/test_cli.yml
+++ b/.github/workflows/test_cli.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.8, 3.9]
+        python-version: [3.9]
         os: [ubuntu-20.04, macos-13]
 
     runs-on: ${{ matrix.os }}
@@ -34,7 +34,7 @@ jobs:
         run: |
           pip install --upgrade pip
           pip install --no-cache-dir torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
-          pip install .[tests,exporters,exporters-tf]
+          pip install .[tests,exporters-tf]
 
       - name: Test with pytest
         run: |
