--- a/.github/workflows/test_onnxruntime.yml
+++ b/.github/workflows/test_onnxruntime.yml
@@ -20,6 +20,8 @@ jobs:
         transformers-version: ["latest"]
         os: [ubuntu-20.04, windows-2019, macos-13]
         include:
+          - transformers-version: "4.36.*"
+            os: ubuntu-20.04
           - transformers-version: "4.45.*"
             os: ubuntu-20.04
 
