--- a/.github/workflows/test_export_tflite_cli_quantization_full_int8.yml
+++ b/.github/workflows/test_export_tflite_cli_quantization_full_int8.yml
@@ -20,10 +20,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.8, 3.9]
-        os: [ubuntu-20.04]
+        python-version: ['3.9']
 
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
     - name: Setup Python ${{ matrix.python-version }}
