--- a/.github/workflows/test_offline.yml
+++ b/.github/workflows/test_offline.yml
@@ -15,10 +15,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.9]
-        os: [ubuntu-20.04]
+        python-version: ['3.9']
 
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-20.04
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
