--- a/.github/workflows/test_utils.yml
+++ b/.github/workflows/test_utils.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install --no-cache-dir torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
-          pip install .[tests]
+          pip install .[tests] datasets
 
       - name: Test with pytest
         working-directory: tests
