--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,7 @@ markers = [
     "rocm_ep_test",
     "tensorflow_test",
     "timm_test",
+    "datasets_test",
     "run_in_series",
     "run_slow",
     "accelerate_test",
