SD3 and Flux support (#2073)
* sd3 support

* unsupported cli model types

* flux transformer support, unet export fixes, updated callback test, updated negative prompt test, flux and sd3 tests

* fixes

* move input generators

* dummy diffusers

* style

* sd3 support

* unsupported cli model types

* flux transformer support, unet export fixes, updated callback test, updated negative prompt test, flux and sd3 tests

* fixes

* move input generators

* dummy diffusers

* style

* distribute ort tests

* fix

* fix

* fix

* test num images

* single process to reduce re-exports

* test

* revert unnecessary changes

* T5Encoder inherits from TextEncoder

* style

* fix typo in timestep

* style

* only test sd3 and flux on latest transformers

* conditional sd3 and flux modeling

* forgot sd3 inpaint

--- a/.github/workflows/test_onnxruntime.yml
+++ b/.github/workflows/test_onnxruntime.yml
@@ -26,14 +26,11 @@ jobs:
             os: ubuntu-20.04
 
     runs-on: ${{ matrix.os }}
+
     steps:
       - name: Free Disk Space (Ubuntu)
         if: matrix.os == 'ubuntu-20.04'
         uses: jlumbroso/free-disk-space@main
-        with:
-          tool-cache: false
-          swap-storage: false
-          large-packages: false
 
       - name: Checkout code
         uses: actions/checkout@v4
@@ -54,13 +51,11 @@ jobs:
         run: pip install transformers==${{ matrix.transformers-version }}
 
       - name: Test with pytest (in series)
-        working-directory: tests
         run: |
-          pytest onnxruntime -m "run_in_series" --durations=0 -vvvv -s
+          pytest tests/onnxruntime -m "run_in_series" --durations=0 -vvvv -s
 
       - name: Test with pytest (in parallel)
+        run: |
+          pytest tests/onnxruntime -m "not run_in_series" --durations=0 -vvvv -s -n auto
         env:
           HF_HUB_READ_TOKEN: ${{ secrets.HF_HUB_READ_TOKEN }}
-        working-directory: tests
-        run: |
-          pytest onnxruntime -m "not run_in_series" --durations=0 -vvvv -s -n auto
