Remove datasets as required dependency (#2087)
* remove datasets required dependency

* install datasets when needed

* add datasets installed when needed

* style

* add require dataset

* divide datasets tests

* import datasets only when needed

--- a/.github/workflows/test_utils.yml
+++ b/.github/workflows/test_utils.yml
@@ -37,4 +37,13 @@ jobs:
       - name: Test with pytest
         working-directory: tests
         run: |
-          python -m pytest -s -vvvv utils
+          pytest utils -s -n auto -m "not datasets_test" --durations=0
+
+      - name: Install datasets
+        run: |
+          pip install datasets
+
+      - name: Tests needing datasets
+        working-directory: tests
+        run: |
+          pytest utils -s -n auto -m "datasets_test" --durations=0
