--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -5,6 +5,7 @@ on:
 
 permissions:
   issues: write
+  pull-requests: write
 
 jobs:
   stale:
@@ -13,6 +14,10 @@ jobs:
       - uses: actions/stale@v8
         with:
           stale-issue-message: 'This issue has been marked as stale because it has been open for 30 days with no activity. This thread will be automatically closed in 5 days if no further activity occurs.'
+          stale-pr-message: 'This PR has been marked as stale because it has been open for 90 days with no activity. This thread will be automatically closed in 30 days if no further activity occurs.'
           exempt-issue-labels: 'bug,exporters,good first issue,onnx,onnxruntime,quantization'
-          days-before-stale: 30
-          days-before-close: 5
+          days-before-issue-stale: 30
+          days-before-issue-close: 5
+          days-before-pr-stale: 90
+          days-before-pr-close: 30
+          exempt-all-pr-assignees: true
