--- a/.github/workflows/test_executorch_export.yml
+++ b/.github/workflows/test_executorch_export.yml
@@ -16,7 +16,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ['3.10', '3.11', '3.12']
-        os: [ubuntu-20.04-16-core, macos-15]
+        os: [macos-15]
 
     runs-on: ${{ matrix.os }}
     steps:
