--- a/docs/Dockerfile
+++ b/docs/Dockerfile
@@ -10,3 +10,4 @@ RUN python3 -m pip install --no-cache-dir git+https://github.com/huggingface/doc
 
 RUN git clone $clone_url && cd optimum && git checkout $commit_sha
 RUN python3 -m pip install --no-cache-dir ./optimum[onnxruntime,benchmark,quality,exporters-tf,doc-build,diffusers]
+RUN python3 -m pip install ./optimum[exporters-executorch]
