--- a/.github/workflows/test_export_onnx.yml
+++ b/.github/workflows/test_export_onnx.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.9']
+        python-version: ["3.9"]
         os: [ubuntu-20.04]
 
     runs-on: ${{ matrix.os }}
@@ -27,13 +27,14 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies for pytorch export
         run: |
-          pip install .[tests,exporters]
+          pip install .[tests,exporters,diffusers]
       - name: Test with unittest
         working-directory: tests
         run: |
           pytest exporters/onnx/test_onnx_*.py -s -n auto -m "not tensorflow_test and not timm_test" --durations=0
       - name: Install dependencies for tensorflow export
         run: |
+          pip uninstall diffusers -y
           pip install .[tests,exporters-tf]
       - name: Test with unittest
         working-directory: tests
