--- a/.github/workflows/test_onnxruntime_slow.yml
+++ b/.github/workflows/test_onnxruntime_slow.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.9']
+        python-version: ["3.9"]
         os: [ubuntu-20.04]
 
     runs-on: ${{ matrix.os }}
@@ -26,7 +26,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies for export
       run: |
-        pip install .[tests,onnxruntime]
+        pip install .[tests,onnxruntime,diffusers]
     - name: Test with unittest
       working-directory: tests
       run: |
