--- a/.github/workflows/test_export_onnx.yml
+++ b/.github/workflows/test_export_onnx.yml
@@ -28,6 +28,7 @@ jobs:
       - name: Install dependencies for pytorch export
         run: |
           pip install .[tests,exporters,diffusers]
+          pip install transformers@git+https://github.com/huggingface/transformers.git
       - name: Test with unittest
         working-directory: tests
         run: |
