--- a/.github/workflows/test_export_onnx_cli.yml
+++ b/.github/workflows/test_export_onnx_cli.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [3.9]
+        python-version: ["3.9"]
         os: [ubuntu-20.04]
 
     runs-on: ${{ matrix.os }}
@@ -28,6 +28,7 @@ jobs:
       - name: Install dependencies for pytorch export
         run: |
           pip install .[tests,exporters,diffusers]
+          pip install transformers@git+https://github.com/huggingface/transformers.git
       - name: Test with unittest
         working-directory: tests
         run: |
