--- a/.github/workflows/test_onnxruntime_gpu.yml
+++ b/.github/workflows/test_onnxruntime_gpu.yml
@@ -2,16 +2,15 @@ name: ONNX Runtime GPU / Python - Test
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - main
+  schedule:
+    - cron: 0 7 * * * # every day at 7am UTC
   pull_request:
     branches:
       - main
     types:
       - opened
-      - reopened
       - labeled
+      - reopened
       - unlabeled
       - synchronize
 
@@ -24,7 +23,6 @@ jobs:
     if: ${{
       (github.event_name == 'push') ||
       (github.event_name == 'workflow_dispatch') ||
-      contains( github.event.pull_request.labels.*.name, 'gpu') ||
       contains(github.event.pull_request.labels.*.name, 'onnxruntime-gpu')
       }}
 
@@ -42,7 +40,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: 3.8
+          python-version: "3.9"
 
       - name: Install dependencies
         run: |
