--- a/.github/workflows/test_onnxruntime_training.yml
+++ b/.github/workflows/test_onnxruntime_training.yml
@@ -2,16 +2,15 @@ name: ONNX Runtime Training / Python - Test
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - main
+  schedule:
+    - cron: 0 7 * * * # every day at 7am UTC
   pull_request:
     branches:
       - main
     types:
       - opened
-      - reopened
       - labeled
+      - reopened
       - unlabeled
       - synchronize
 
@@ -20,11 +19,10 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  do-the-job:
+  build:
     if: ${{
       (github.event_name == 'push') ||
       (github.event_name == 'workflow_dispatch') ||
-      contains( github.event.pull_request.labels.*.name, 'training') ||
       contains( github.event.pull_request.labels.*.name, 'onnxruntime-training')
       }}
 
@@ -42,7 +40,7 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: 3.8
+          python-version: "3.9"
 
       - name: Install dependencies
         env:
@@ -53,10 +51,6 @@ jobs:
           pip install --no-cache-dir torch-ort onnxruntime-training && python -m torch_ort.configure
           pip install --no-cache-dir evaluate absl-py rouge_score seqeval sacrebleu nltk scikit-learn
           pip install .[tests,onnxruntime-gpu]
-
-      - name: Replace opencv-python with opencv-python-headless
-        run: |
-          pip uninstall -y opencv-python && pip install opencv-python-headless
 
       - name: Test with pytest
         run: |
