--- a/.github/workflows/test_onnxruntime.yml
+++ b/.github/workflows/test_onnxruntime.yml
@@ -49,7 +49,12 @@ jobs:
       - name: Install transformers ${{ matrix.transformers-version }}
         if: ${{ matrix.transformers-version != 'latest' }}
         run: |
-          pip install "transformers==${{ matrix.transformers-version }}" "diffusers<0.32.0"
+          pip install "transformers==${{ matrix.transformers-version }}"
+
+      - name: Install diffusers
+        if: matrix.transformers-version == '4.36.*'
+        run: |
+          pip install "diffusers<0.32.0"
 
       - name: Test with pytest (in series)
         run: |
