--- a/.github/workflows/test_onnxruntime.yml
+++ b/.github/workflows/test_onnxruntime.yml
@@ -51,7 +51,7 @@ jobs:
         run: |
           pip install "transformers==${{ matrix.transformers-version }}"
 
-      - name: Install diffusers
+      - name: Downgrade diffusers
         if: matrix.transformers-version == '4.36.*'
         run: |
           pip install "diffusers<0.32.0"
