--- a/.github/workflows/test_onnxruntime.yml
+++ b/.github/workflows/test_onnxruntime.yml
@@ -38,17 +38,23 @@ jobs:
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.9'
+          python-version: "3.9"
 
       - name: Install dependencies
         run: |
           pip install --upgrade pip
           pip install --no-cache-dir torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
-          pip install .[tests,onnxruntime]
+          pip install .[tests,onnxruntime,diffusers]
 
       - name: Install transformers ${{ matrix.transformers-version }}
         if: ${{ matrix.transformers-version != 'latest' }}
-        run: pip install transformers==${{ matrix.transformers-version }}
+        run: |
+          pip install "transformers==${{ matrix.transformers-version }}"
+
+      - name: Downgrade diffusers
+        if: matrix.transformers-version == '4.36.*'
+        run: |
+          pip install "diffusers<0.32.0"
 
       - name: Test with pytest (in series)
         run: |
