--- a/.github/workflows/test_bettertransformer.yml
+++ b/.github/workflows/test_bettertransformer.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           pip install .[tests]
           pip install --no-cache-dir --upgrade torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
-          pip install accelerate
+          pip install accelerate transformers==4.48.*
 
       - name: Test with stable pytorch
         working-directory: tests
