--- a/tests/bettertransformer/Dockerfile_bettertransformer_gpu
+++ b/tests/bettertransformer/Dockerfile_bettertransformer_gpu
@@ -15,7 +15,7 @@ RUN apt-get autoremove -y
 RUN python3 -m pip install -U pip
 
 RUN pip install torch torchvision torchaudio
-RUN pip install transformers accelerate datasets
+RUN pip install transformers==4.48.* accelerate datasets
 
 # Install Optimum
 COPY . /workspace/optimum
