--- a/.github/workflows/test_benckmark.yml
+++ b/.github/workflows/test_benckmark.yml
@@ -29,6 +29,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
         run: |
+          pip install -U setuptools
           pip install wheel
           pip install .[tests,onnxruntime,benchmark] datasets
       - name: Test with unittest
