Remove diffusers extra

--- a/.github/workflows/test_export_onnx_cli.yml
+++ b/.github/workflows/test_export_onnx_cli.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install .[tests,exporters,diffusers]
+          pip install .[tests,exporters] diffusers
 
       - name: Test with pytest
         run: |
