--- a/.github/workflows/test_onnx.yml
+++ b/.github/workflows/test_onnx.yml
@@ -27,7 +27,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        pip install .[tests,exporters,diffusers]
+        pip install .[tests,exporters] diffusers
     - name: Test with unittest
       working-directory: tests
       run: |
