--- a/.github/workflows/test_export_tflite_cli_dynamic_quantization_int8.yml
+++ b/.github/workflows/test_export_tflite_cli_dynamic_quantization_int8.yml
@@ -6,10 +6,8 @@ on:
   pull_request:
     branches: [ main ]
     paths:
-      - "optimum/exporters/tasks.py"
       - "optimum/exporters/tflite/**.py"
-      - "tests/exporters/**.py"
-      - "setup.py"
+      - "tests/exporters/tflite/**.py"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
