--- a/.github/workflows/test_export_onnx_cli.yml
+++ b/.github/workflows/test_export_onnx_cli.yml
@@ -36,7 +36,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          pip install .[tests,exporters,diffusers]
+          pip install .[tests,exporters] diffusers
 
       - name: Test with pytest
         run: |
