--- a/.github/workflows/test_export_tflite.yml
+++ b/.github/workflows/test_export_tflite.yml
@@ -2,13 +2,13 @@ name: Exporters TFLite / Python - Test
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
     paths:
-      - "optimum/exporters/tasks.py"
+      - ".github/workflows/test_export_tflite_cli.yml"
       - "optimum/exporters/tflite/**.py"
-      - "tests/exporters/**.py"
+      - "tests/exporters/tflite/**.py"
       - "setup.py"
 
 concurrency:
@@ -20,19 +20,28 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.9', '3.11']
+        python-version: ["3.9"]
 
-    runs-on: ubuntu-22.04
+    runs-on: [intel-cpu, 8-cpu, ci]
+
     steps:
-    - uses: actions/checkout@v2
-    - name: Setup Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        pip install .[tests,exporters-tf]
-    - name: Test with unittest
-      working-directory: tests
-      run: |
-        pytest exporters/tflite/test_tflite_*.py -s --durations=0
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Setup Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: Install dependencies
+        run: |
+          pip install --upgrade pip
+          pip install --no-cache-dir torch==2.1.2 torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
+          pip install .[tests,exporters-tf]
+
+      - name: Test with pytest
+        working-directory: tests
+        env:
+          HF_HOME: /mnt/cache/.cache/huggingface
+        run: |
+          pytest exporters/tflite/test_tflite_export.py -k "not quantization" -s -vvvv --durations=0
