--- a/.github/workflows/test_export_tflite_cli_quantization.yml
+++ b/.github/workflows/test_export_tflite_cli_quantization.yml
@@ -1,4 +1,4 @@
-name: Exporters TFLite CLI / Python - Test
+name: Exporters TFLite CLI Quantization / Python - Test
 
 on:
   push:
@@ -21,6 +21,15 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.9"]
+        quantization_schema:
+          [
+            tflite_float16_quantization,
+            tflite_int8_dynamic_quantization,
+            tflite_int8_quantization_with_custom_dataset,
+            tflite_int8_quantization_with_default_dataset,
+            tflite_int8x16_quantization_with_default_dataset,
+            tflite_full_int8_quantization_with_default_dataset,
+          ]
 
     runs-on: [intel-cpu, 8-cpu, ci]
 
@@ -44,4 +53,4 @@ jobs:
         env:
           HF_HOME: /mnt/cache/.cache/huggingface
         run: |
-          pytest exporters/tflite/test_exporters_tflite_cli.py -k "not quantization" -s -vvvv --durations=0
+          pytest exporters/tflite/test_exporters_tflite_cli.py -k "${{ matrix.quantization_schema }}" -s -vvvv --durations=0
