--- a/.github/workflows/test_export_tflite_cli.yml
+++ b/.github/workflows/test_export_tflite_cli.yml
@@ -22,7 +22,8 @@ jobs:
       matrix:
         python-version: ["3.9"]
 
-    runs-on: [intel-cpu, 8-cpu, ci]
+    runs-on:
+      group: aws-general-8-plus
 
     steps:
       - name: Checkout code
