--- a/.github/workflows/test_export_tflite_cli.yml
+++ b/.github/workflows/test_export_tflite_cli.yml
@@ -22,8 +22,7 @@ jobs:
       matrix:
         python-version: ["3.9"]
 
-    runs-on:
-      group: aws-general-8-plus
+    runs-on: ubuntu-22.04
 
     steps:
       - name: Checkout code
