tes fx optimization and quantization

--- a/.github/workflows/test_fx_automatic_parallel.yml
+++ b/.github/workflows/test_fx_automatic_parallel.yml
@@ -1,4 +1,4 @@
-name: Automatic Model/Tensor Parallelism on GPU / Python - Test
+name: FX Automatic Parallelism on GPU / Python - Test
 
 on:
   pull_request:
