--- a/.github/workflows/test_fx.yml
+++ b/.github/workflows/test_fx.yml
@@ -19,7 +19,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.9"]
-        os: [ubuntu-22.04, macos-13]
+        os: [ubuntu-22.04]
 
     runs-on: ${{ matrix.os }}
     steps:
@@ -27,15 +27,20 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
         run: |
+          pip install --upgrade pip
+          pip install --no-cache-dir torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cpu
           pip install .[tests]
 
-      - name: Test with pytest
-        working-directory: tests
+      - name: Test with pytest (optimization)
         run: |
-          python -m pytest -s -v -x fx/optimization
+          pytest -s -v tests/fx/optimization
+
+      - name: Test with pytest (quantization)
+        run: |
+          pytest -s -v tests/fx/quantization
